<resources>
    <string name="app_name">Doc24x7</string>
    <string name="text_english" translatable="false">English</string>
    <string name="text_hindi" translatable="false">हिंदी</string>
    <string name="text_spanish" translatable="false">"Español"</string>
    <string name="share" translatable="true">Share</string>
    <string name="consult_now">Consult Now</string>
    <string name="send_report">Attach Report</string>
    <string name="send_report_optional">Send Report(Optional)</string>
    <string name="send_prescription_and_get_medicine">
Send Prescription and Get Medicine</string>
    <string name="online_doctors">Doctors are online \n Consult now </string>
    <string name="viewprofile" translatable="true"> View and edit profile </string>
    <string name="profile" translatable="true">Profile</string>
    <string name="my_appointment" translatable="false">My Appointment</string>
    <string name="help_center" translatable="false">Help Center</string>
    <string name="symptoms">Symptoms</string>
    <string name="logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="network_error_title">Network Error!</string>
    <string name="err_msg_mobile">Cannot be empty</string>
    <string name="err_msg_email">Email Cannot be empty</string>
    <string name="err_msg_username">User Address Cannot be empty</string>
    <string name="err_msg_password">Password Cannot be Empty</string>
    <string name="err_msg_contact">Contact Number Cannot be Empty</string>
    <string name="err_msg_lastname">Name Cannot be Empty</string>
    <string name="indian_rupay">\U+20B9</string>
    <string name="facebook_app_id">422040801847810</string>
    <string name="start_timer">stop_timer stop_timer stop_timer </string>
    <string name="rupiya">Rs </string>
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Star Ratings</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>
    <string name="network_error_message">Please check your network connection and try again.</string>
    <string name="attention_error_title">Attention!</string>
    <string name="successful_title">Successful!</string>
    <string name="password_error">Please enter valid password</string>
    <string name="mobilenumber_error">Enter Valid Mobile Number</string>
    <string name="err_msg_piclocation">Enter Select Pic Locationr</string>
    <string name="err_msg_droplocation">Enter Select Drop Location.</string>
    <string name="transactionId_error">Enter valid transaction ID</string>
    <string name="amount_error">Please enter recharge amount</string>
    <string name="amount_transfer_error">Please enter amount</string>
    <string name="transfer_type_error">Please select payment system</string>
    <string name="bank_error">Please select bank</string>
    <string name="operator_error">Please select operator</string>
    <string name="previouspass_error">Incorrect current password!</string>
    <string name="newpass_error">New password not matched!</string>
    <string name="pinpass_error">Pin password not matched!</string>
    <string name="transaction_empty_message">No transaction history found!</string>
    <string name="empty_list_message">No data history found!</string>
    <string name="login_error_title">Error!</string>
    <string name="agora_app_id">dfb0392b4acd41969e218674b588fd5c</string>
    <string name="err_msg_new_pass">Please Enter Your New Password</string>
    <string name="err_msg_cnf_pass">Please Enter Your Confirm Password</string>
    <string name="err_msg_match_pass">New Password and Confirm Password does not match.</string>
    <string name="err_msg_old_pass">Please Enter Your Old Password</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="promo_apply_text">Apply promo code to avail exciting offers</string>
    <string name="tagline">Talk to doctors online about your issues and get answers. Get online consultation from verified doctors online.</string>
    <string name="label_options">Options</string>
    <string-array name="string_array_frame_rate">
        <item>1</item>
        <item>7</item>
        <item>10</item>
        <item>15</item>
        // the default one
        <item>24</item>
        <item>30</item>
    </string-array>
    <string-array name="encryption_mode_values">
        <item>AES-128-XTS</item>
        <item>AES-256-XTS</item>
    </string-array>
    <string-array name="string_array_bit_rate">
        <item>80</item>
        // 120P
        <item>160</item>
        // 180P
        <item>200</item>
        // 240P
        <item>400</item>
        // 360P
        <item>500</item>
        // 480P
        <item>1000</item>
        // 720P
    </string-array>
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="agora_access_token">00692c2c498cd6a4f8784c59a716d520f1dIABep2ms9C5DstlvYmSt1jnLCC76KxiUq4Rzd2c2qkdEycVEwG0AAAAAEAAEa9nrwRlJYAEAAQDBGUlg</string>
    <string-array name="string_array_resolutions">
        <item>160x120</item>
        // 120P
        <item>320x180</item>
        // 180P
        <item>320x240</item>
        // 240P the default one
        <item>640x360</item>
        // 360P
        <item>640x480</item>
        // 480P
        <item>1280x720</item>
        // 720P
    </string-array>
    <string name="str_login">Login</string>
    <string name="str_account">Account</string>
    <string name="account_empty">Account can not be empty</string>
    <string name="account_too_long">Account can not exceed 64 characters</string>
    <string name="account_starts_with_space">Account can not starts with space</string>
    <string name="account_literal_null">Account can not be \"null\"</string>
    <string name="login_failed">Login failed</string>
    <string name="title_peer_msg">Peer to peer message</string>
    <string name="title_channel_message">Channel message</string>
    <string name="hint_friend">Friends name</string>
    <string name="hint_channel">Channel name</string>
    <string name="hint_enable_offline_message">Enable offline message</string>
    <string name="account_cannot_be_yourself">Account can not be yourself</string>
    <string name="channel_name_empty">Channel name can not be empty</string>
    <string name="channel_name_too_long">Channel name can not exceed 64 characters</string>
    <string name="channel_name_starts_with_space">Channel name can not start with space</string>
    <string name="channel_name_literal_null">Channel name can not be \"null\"</string>
    <string name="btn_chat">Chat</string>
    <string name="btn_join">Join</string>
    <string name="channel_title" translatable="false">%s(%d)</string>
    <string name="join_channel_failed">Join channel failed</string>
    <string name="single_input">Single line input</string>
    <string name="str_send">Send</string>
    <string name="send_msg_failed">Failed to send message</string>
    <string name="peer_offline">Peer is offline</string>
    <string name="message_cached">Message cached by server</string>
    <string name="reconnecting">Network reconnecting ...</string>
    <string name="account_offline">Connection lost</string>
    <string name="find_doctor_in_top_speci">Find doctor in top specialities</string>
    <string name="finddoctornear_you">Find Doctor \n Near You</string>
    <string name="find_doctorby_name">Find Doctor by Name</string>
    <string name="finddoctorbyspecilist">Find Doctor by Specialist</string>
    <string name="find_doctor_by_symptom">Find Doctor By Symptoms</string>
    <string name="specialities">Specialities</string>
    <string name="searchpythology">Search Pythology</string>
    <string name="bookappointment">Book Appointment</string>
    <string name="search_by_doctor">Search by doctor , specialist..</string>
    <string name="search">Search</string>
    <string name="purpose_of_visit">Purpose of visit</string>
    <string name="consultation">Consultation</string>
    <string name="date_and_time">Date and time</string>
    <string name="please_provide_patient_detail">Please provide patient detail:</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_mobile">Patient Mobile</string>
    <string name="patient_age">Patient Age</string>
    <string name="clientmobilenumber">Client Mobile Number</string>
    <string name="patient_email">Patient Email (Optional)</string>
    <string name="bookingterm">By booking we agree your terms and conditions</string>
    <string name="patient_sympton">Patient symptom</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_done">Done</string>
    <string name="appointment_for">Appointment for</string>
    <string name="self">Self</string>
    <string name="someone_else">Someone else</string>
    <string name="version">Version : 1.2</string>
    <string name="paymentdetail">Payment Detail</string>
    <string name="consultationfees">Consultation fees : </string>
    <string name="amounttopay">Amount to Pay :   </string>
    <string name="payandconsult">Pay And Consult</string>
    <string name="consult_with_doctor">Consult with doctor</string>
    <string name="entersymptoms">Enter symptoms</string>
    <string name="submit">Submit</string>
    <string name="senddigit">We have sent you an SMS on +918318630645 \n with a 6 digit verification code</string>
    <string name="help">Help</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="website">Website: </string>
    <string name="time">Time: </string>
    <string name="location">Location: </string>
    <string name="locationluck"> Lucknow, Utter Pradesh 226001</string>
    <string name="timedata">8am to 6pm(Monday to Friday) "\n"9am to 4pm(Saturday to Sunday)</string>
    <string name="sucessful">Sucessful</string>
    <string name="patient_login">Patient Login</string>
    <string name="phone">Mobile No.</string>
    <string name="register">Register</string>
    <string name="otpverification">Otp Verification</string>
    <string name="enter_code">Enter code</string>
    <string name="continueeee">Continue</string>
    <string name="message_cancle_appointment">Hello pateint your appointment has been canceled due to doctor will be on leave</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_valid_mobile_number">Enter valid mobile number</string>
    <string name="tell_us_your_symptom">Tell us your symptom or health problem</string>
    <string name="booking_date"> Booking Date : </string>
    <string name="consult_date"> Consult Date : </string>
    <string name="year_experiance"> Year experiance</string>
    <string name="consultation_fees"> Consultation fees</string>
    <string name="no_prescription"> No Prescription</string>
    <string name="view_prescription"> View Prescription</string>
    <string name="no_doctors_found"> No Doctor Found</string>
    <string name="failure_connection_reset">Failure Connnection reset</string>
    <string name="chat_now">Doctors are online \n Chat Now</string>
    <string name="failed"> Failed</string>
    <string name="no_data_found"> No Data Found</string>
    <string name="select_language"><b>Select Language</b></string>
</resources>